<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item android:title="@string/top_5_business_news_channel_in_india">
            <menu>
                <item
                    android:id="@+id/zeeBusiness"
                    android:menuCategory="secondary"
                    android:title="@string/zee_business" />
                <item
                    android:id="@+id/cnbcTv18"
                    android:menuCategory="secondary"
                    android:title="@string/cnbc_tv_18" />
                <item
                    android:id="@+id/cnnIBM"
                    android:menuCategory="secondary"
                    android:title="@string/cnn_ibm" />
                <item
                    android:id="@+id/etNow"
                    android:menuCategory="secondary"
                    android:title="@string/et_now" />
                <item
                    android:id="@+id/ndtvProfit"
                    android:menuCategory="secondary"
                    android:title="@string/ndtv_profit" />

            </menu>

        </item>

        <item android:title="@string/top_10_news_channel_in_india">
            <menu>
                <item
                    android:id="@+id/AajTakNews"
                    android:menuCategory="secondary"
                    android:title="@string/aaj_tak" />
                <item
                    android:id="@+id/DDNews"
                    android:menuCategory="secondary"
                    android:title="@string/dd_news" />
                <item
                    android:id="@+id/DNAIndiaNews"
                    android:menuCategory="secondary"
                    android:title="@string/dna_india" />
                <item
                    android:id="@+id/IndiaTvNews"
                    android:menuCategory="secondary"
                    android:title="@string/india_tv" />
                <item
                    android:id="@+id/IBN7News"
                    android:menuCategory="secondary"
                    android:title="@string/ibn7" />
                <item
                    android:id="@+id/ZeeNewsNews"
                    android:menuCategory="secondary"
                    android:title="@string/zee_news" />
                <item
                    android:id="@+id/ABPNews"
                    android:menuCategory="secondary"
                    android:title="@string/abp_news" />
                <item
                    android:id="@+id/RepublicTV"
                    android:menuCategory="secondary"
                    android:title="@string/republic_tv" />
                <item
                    android:id="@+id/News24"
                    android:menuCategory="secondary"
                    android:title="@string/news_24" />
                <item
                    android:id="@+id/IndiaNews"
                    android:menuCategory="secondary"
                    android:title="@string/india_news" />
            </menu>
        </item>

        <item android:title="@string/top_10_news_channel">
        <menu>
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:menuCategory="secondary"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:menuCategory="secondary"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/FoxNews"
            android:menuCategory="secondary"
            android:title="@string/fox_news" />
        <item
            android:id="@+id/MSNBCNews"
            android:menuCategory="secondary"
            android:title="@string/msnbc_news" />
        <item
            android:id="@+id/SkyNews"
            android:menuCategory="secondary"
            android:title="@string/sky_news" />
        <item
            android:id="@+id/EuroNews"
            android:menuCategory="secondary"
            android:title="@string/euro_news" />
        <item
            android:id="@+id/NDTVNews"
            android:menuCategory="secondary"
            android:title="@string/ndtv_news" />
        <item
            android:id="@+id/GeoNews"
            android:menuCategory="secondary"
            android:title="@string/geo_news" />
        <item
            android:id="@+id/AlArabiya"
            android:menuCategory="secondary"
            android:title="@string/al_arabiya" />
        </menu>
        </item>

        <item
            android:title="@string/up_coming">
            <menu>
                <item
                    android:title="@string/espn"
                    android:menuCategory="secondary"
                    android:id="@+id/Espn"/>
                <item
                    android:title="@string/sky_sports"
                    android:menuCategory="secondary"
                    android:id="@+id/SkySports"/>
                <item
                    android:title="@string/fox_sports"
                    android:menuCategory="secondary"
                    android:id="@+id/FoxSports"/>
                <item
                    android:title="@string/nba"
                    android:menuCategory="secondary"
                    android:id="@+id/Nba"/>
                <item
                    android:title="@string/mlb"
                    android:menuCategory="secondary"
                    android:id="@+id/Mlb"/>
            </menu>
        </item>


    </group>


</menu>

